Fix GetID to not try to get attrs in unknown namespaces.  Bug 220027, r=peterv, sr=jst